# azrust

./: Cargo.toml  README.md  z.todo
.github/workflows/: rust.yml
src/: main.rs
