[package]
name = "azrust"
version = "0.1.0"
description = "Simple fast file finder made in Rust."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
humansize = { version = "2.1.3", features = ["no_alloc"] }
regex = "1.9.5"
serde_json = "1.0.107"
walkdir = "2.4.0"

[dependencies.clap]
version = "4.4.6"
default-features = false
features = ["std", "help", "usage", "color", "suggestions", "cargo", "derive", "wrap_help"]
