[package]
name = "azrust"
version = "1.2.0"
description = "A quick and easy-to-use file finder made with Rust."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
humansize = { version = "2.1.3" }
regex = "1.9.5"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
walkdir = "2.4.0"
serde = { version = "1.0.188", default-features = false, features = ["derive"] }

[dependencies.clap]
version = "4.4.6"
default-features = false
features = ["std", "help", "usage", "color", "suggestions", "cargo", "derive", "wrap_help"]
